fix(soutenance): Update BackgroundZone and CollapsePanel components to use children props, move getFormattedTitle in utils folder, update img RentalCard to add cover and to add a linear-gradient.

--- a/src/styles/components/_rentalCard.scss
+++ b/src/styles/components/_rentalCard.scss
@@ -2,10 +2,23 @@
   position: relative;
   height: 100%;
 
+  .img {
+    position:relative;
+    height:100%;
+  }
+
+  .img:after {
+    content:'';
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%; 
+    height:100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(4, 4, 4, 0.20) 80%, rgb(0, 0, 0, 0.50) 100%);
+  }
   img {
     height: 100%;
     max-width: 100%;
-    border-radius: 10px;
   }
 
   .rental-title {
